# python_playground

./: .gitignore  main.py  pyproject.toml
notebooks/: main.ipynb  sample_aynp.ipynb
src/: eot.py  kernel.py  metric.py
